z-index fix

--- a/styles/css/book.css
+++ b/styles/css/book.css
@@ -4160,6 +4160,7 @@ body {
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 2;
 }
 
 #linkmodal {
